feat: Update database configuration to use environment variables

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ PORT=3000
 
 # Database Environment Variables
 DATABASE_HOST=localhost
-DATABASE_PORT=3306
-DATABASE_USERNAME=template
-DATABASE_PASSWORD=template
-DATABASE_NAME=template
+DATABASE_PORT=3307
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=root
+DATABASE_NAME=beachtennisstudentsmanager
