--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,17 @@
 version: '3.8'
 
 services:
-  backend:
-    image: your_backend_image_name:tag
-    ports:
-      - "${PORT}:3000"
-    environment:
-      - JWT_SECRET=secretKey
-      - PORT=${PORT}
-      - DATABASE_HOST=${DATABASE_HOST}
-      - DATABASE_PORT=${DATABASE_PORT}
-      - DATABASE_USERNAME=${DATABASE_USERNAME}
-      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
-      - DATABASE_NAME=${DATABASE_NAME}
-    depends_on:
-      - database
-
   database:
     image: mysql:latest
+    env_file: ./.env
+    container_name: beachtennisstudentsmanagermysql
     restart: always
     ports:
-      - "${DATABASE_PORT}:3306"
+      - "${DATABASE_PORT:-3307}:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=${DATABASE_PASSWORD}
       - MYSQL_DATABASE=${DATABASE_NAME}
-      - MYSQL_USER=${DATABASE_USERNAME}
-      - MYSQL_PASSWORD=${DATABASE_PASSWORD}
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      timeout: 5s
+      retries: 10
