--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.0",
     "config": "^3.3.9",
     "dotenv": "^16.4.5",
+    "moment": "^2.30.1",
     "mysql2": "^3.6.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
